# liblc3

./: .gitattributes  .gitignore  Makefile  README.md  makefile.mk  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
conformance/: README.md  lc3plus_decode.html  lc3plus_encdec.html  lc3plus_encode.html  lc3plus_hr_decode.html  lc3plus_hr_encdec.html  lc3plus_hr_encode.html  music_decode_10m.html  music_decode_7m5.html  music_encdec_10m.html  music_encdec_7m5.html  music_encode_10m.html  music_encode_7m5.html  speech_decode_10m.html  speech_decode_7m5.html  speech_encdec_10m.html  speech_encdec_7m5.html  speech_encode_10m.html  speech_encode_7m5.html
fuzz/: dfuzz.cc  efuzz.cc  fuzz_lc3.cc  makefile.mk
include/: lc3.h  lc3_cpp.h  lc3_private.h
python/: lc3.py  pyproject.toml
python/tests/: basic_test.py
python/tools/: decoder.py  encoder.py
src/: attdet.c  attdet.h  bits.c  bits.h  bwdet.c  common.h  energy.c  energy.h  fastmath.h  fixmath.h  lc3.c  ltpf.c  ltpf.h  ltpf_arm.h  ltpf_neon.h  mdct.c  mdct.h  mdct_neon.h  meson.build  sns.c  sns.h  spec.c  spec.h  tables.c  tables.h  tns.c  tns.h
tables/: fastmath.py  mktables.py
test/: attdet.py  attdet_py.c  bwdet.py  bwdet_py.c  ctypes.h  decoder.py  encoder.py  energy.py  energy_py.c  ltpf.py  ltpf_py.c  makefile.mk  mdct.py  mdct_py.c  setup.py  sns.py  sns_py.c  spec.py  spec_py.c  tables.py  tns.py  tns_py.c
test/neon/: makefile.mk  neon.h  test_neon.c
tools/: dlc3.c  elc3.c  lc3bin.c  lc3bin.h  makefile.mk  meson.build  wave.c
zephyr/: module.yml
