[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lc3"
version = "0.0.1"
license = "Apache-2.0"
authors = [
  { name="Antoine Soulier", email="asoulier@google.com" },
]
description = "LC3 Codec library wrapper"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/google/liblc3"
